--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <ul><a href="연대기.html" target="black">연대기</a></ul>
             <ul><a href="토로로의 종류.html" target="black">토로로의 종류</a></ul>
             <ul><a href="하즈성경.html" target="black">하즈성경</a></ul>
-            <ul><a href="지구상의 토로로.html" target="black">지구상의 토로로</a></ul>
             <ul><a href="참야비.html" target="black">참야비</a></ul>
-            <ul><a href="여담.html" target="black">여담</a></ul>
+            <ul><a href="하즈의 추종자들.html" target="black">하즈의 추종자들</a></ul>
+
         </div>
         <div id="about">
             <img src="img/giphy.gif" width="50% ">
