--- a/하즈성경.html
+++ b/하즈성경.html
@@ -16,12 +16,12 @@
 
     <div class="grid">
         <div id="list">
-            <ul><a href="연표.html">연표</a></ul>
+            <ul><a href="연대기.html">연대기</a></ul>
             <ul><a href="토로로의 종류.html">토로로의 종류</a></ul>
             <ul><a href="하즈성경.html">하즈성경</a></ul>
             <ul><a href="참야비.html">참야비</a></ul>
             <ul><a href="하즈의 추종자들.html">하즈의 추종자들</a></ul>
-            <ul><a href="여담.html">여담</a></ul>
+
         </div>
         <div class="성경사진과본문">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
